@@ -13,8 +13,10 @@ export(createCompDb)
 export(createCompDbPackage)
 export(expandMzIntensity)
 export(hasMsMsSpectra)
+export(import_mona_sdf)
 export(make_metadata)
 export(msms_spectra_hmdb)
+export(msms_spectra_mona)
 export(src_compdb)
 export(tables)
 exportClasses(CompDb)
